--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -1,1 +1,176 @@
-/* pages/home/home.wxss */
+.page {
+  padding: 24rpx 20rpx 40rpx;
+  background-color: #f7efe3;
+  min-height: 100vh;
+  box-sizing: border-box;
+}
+
+.section {
+  background: #fff;
+  border-radius: 18rpx;
+  padding: 20rpx;
+  margin-bottom: 30rpx;
+  box-shadow: 0 6rpx 18rpx rgba(0, 0, 0, 0.04);
+}
+
+.table {
+  display: flex;
+  flex-direction: column;
+}
+
+.row {
+  display: flex;
+  align-items: stretch;
+  margin-bottom: 16rpx;
+}
+
+.row:last-child {
+  margin-bottom: 0;
+}
+
+.label-cell {
+  width: 120rpx;
+  background: #fff;
+  border-radius: 14rpx;
+  border: 2rpx solid #f0f0f0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 12rpx 8rpx;
+  text-align: center;
+  color: #333;
+  font-weight: 600;
+  box-sizing: border-box;
+}
+
+.section-label {
+  font-size: 32rpx;
+  line-height: 36rpx;
+}
+
+.section-label.concentrated {
+  color: #2b57ff;
+}
+
+.section-label.dispersed {
+  color: #7bb242;
+}
+
+.time-label {
+  font-size: 30rpx;
+  color: #222;
+  gap: 6rpx;
+}
+
+.label-title {
+  font-size: 30rpx;
+}
+
+.label-time {
+  font-size: 26rpx;
+  color: #444;
+}
+
+.row-content {
+  flex: 1;
+  display: flex;
+}
+
+.date-cell,
+.course-cell {
+  flex: 1;
+  background: #fff;
+  border-radius: 12rpx;
+  border: 2rpx solid #f0f0f0;
+  padding: 12rpx 6rpx;
+  text-align: center;
+  margin-left: 12rpx;
+  box-sizing: border-box;
+}
+
+.day {
+  font-size: 28rpx;
+  font-weight: 600;
+  color: #222;
+}
+
+.date {
+  display: block;
+  font-size: 26rpx;
+  color: #333;
+  margin-top: 6rpx;
+}
+
+.date-underline {
+  width: 60rpx;
+  height: 6rpx;
+  background: #f7b400;
+  margin: 8rpx auto 0;
+  border-radius: 6rpx;
+}
+
+.course-name {
+  font-size: 24rpx;
+  font-weight: 600;
+  color: #333;
+  margin-bottom: 6rpx;
+  display: block;
+}
+
+.course-room {
+  font-size: 22rpx;
+  color: #666;
+  display: block;
+}
+
+.course-cell.is-highlight {
+  background: #f6c352;
+  border-color: #f6c352;
+}
+
+.course-cell.is-highlight .course-name,
+.course-cell.is-highlight .course-room {
+  color: #fff;
+}
+
+.info-bar {
+  margin-top: 18rpx;
+  background: #fff;
+  border-radius: 12rpx;
+  padding: 16rpx 18rpx;
+  display: flex;
+  justify-content: space-between;
+  font-size: 28rpx;
+  font-weight: 600;
+  color: #666;
+}
+
+.concentrated-bar {
+  color: #2b57ff;
+}
+
+.dispersed-bar {
+  color: #7bb242;
+}
+
+.action-row {
+  display: flex;
+  margin-top: 18rpx;
+}
+
+.action-btn {
+  flex: 1;
+  border: 3rpx solid #f7b400;
+  color: #f7b400;
+  border-radius: 40rpx;
+  text-align: center;
+  padding: 16rpx 0;
+  font-size: 28rpx;
+  font-weight: 600;
+  background: #fff;
+}
+
+.action-btn + .action-btn {
+  margin-left: 18rpx;
+}
