--- a/pages/leave/leave.wxml
+++ b/pages/leave/leave.wxml
@@ -24,10 +24,10 @@
   <picker 
     class="item-picker" 
     mode="date" 
-    value="{{date}}" 
-    start="{{startDate}}" 
-    end="2025-12-31" 
-    bindchange="onDateChange"
+  value="{{date}}" 
+  start="{{startDate}}" 
+  end="{{endDate}}" 
+  bindchange="onDateChange"
   >
     <view class="picker-content">
       <text>{{date}}</text>
